[package]
name = "sconar"
version = "0.1.0"
authors = ["Andrew Jones <ascjones@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8.2"
anyhow = "1.0.38"
scale = { version = "2.0.0", package = "parity-scale-codec" }
scale-info = { version = "0.6", default-features = false, features = ["derive", "decode"] }
indexmap = "1.6.1"
itertools = "0.10.0"
nom = "6.1.0"
escape8259 = "0.5.0"
thiserror = "1.0.23"
log = "0.4.13"
hex = "0.4.2"
